--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="slider-description">
                         <div class="slider-text">
                             <h4>1 Week</h4>
-                            <p>Can you beat them all? You have one week to try your best!</p>
+                            <p>Can you beat them all? You have one week to try!</p>
                         </div>
                         <div class="slider-title d-flex justify-content-between">
                             <div class="title-left">
@@ -225,9 +225,7 @@
             <!-- slider -->
         </div>
         <!-- top area -->
-        <div class="classes-cloud-one"><img src="images/yellow-cloud.png" alt=""></div>
-        <div class="classes-cloud-two"><img src="images/yellow-cloud.png" alt=""></div>
-        <div class="classes-cloud-three"><img src="images/yellow-cloud.png" alt=""></div>
+       
     </div>
 </section>
 <!-- ====================================
@@ -247,28 +245,30 @@
 			</div>
 			<!-- col-md-4 -->
 			<div class="col-md-2 col-sm-6 col-lg-2">
-				<h4><a href="index.html" class="nav-link">Home</a></h4>
-				<!-- <ul class="footer-link">
+				<h4>Navigation</h4>
+				<ul class="footer-link">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="games.html" class="nav-link">Games</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">Cart</a></li>
 	
-				</ul> -->
+				</ul>
 			</div>
-			<div class="col-md-2 col-sm-6 col-lg-2">
-				<h4><a href="games.html" class="nav-link">Games</a></h4>
-		
+            <div class="col-md-4 col-sm-6 col-lg-4">
+				<h4>Contact Us</h4>
+				<ul class="footer-link">
+			
+					<li class="nav-item">Pacelli Jace Company LLC</li>
+					<li class="nav-item">Address: 102 E Kimberly Rd Ste I #124 Davenport IA 52806 USA</li>
+					<li class="nav-item">Phone: Toll Free +1 (844) 936-2657</li>
+					<li class="nav-item">Email: admin@PacelliJaceCo.com</li>
+
+				</ul>
 			</div>
-			<div class="col-md-2 col-sm-6 col-lg-2">
-				<h4><a href="#" class="nav-link">Cart</a></h4>
-		
-			</div>
+
 
 		</div>
 	</div>
-	<div class="footer-shape-one"><img src="images/shape-11.png" alt=""></div>
-	<div class="footer-shape-two"><img src="images/shape-11.png" alt=""></div>
-	<div class="footer-shape-three"><img src="images/dragon.png" alt=""></div>
+
 </footer>
 
    <!-- Theme Need JS -->
